--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,13 @@
     }
   ],
   "rewrites": [
-  { "source": "/raw/(.*)", "destination": "/raw/$1.lua" }
+    {
+      "source": "/raw/(.*)",
+      "destination": "/raw/$1"
+    },
+    {
+      "source": "/:page",
+      "destination": "/:page.html"
+    }
   ]
 }
