--- a/vercel.json
+++ b/vercel.json
@@ -9,13 +9,6 @@
     }
   ],
   "rewrites": [
-    {
-      "source": "/raw/(.*)",
-      "destination": "/raw/$1"
-    },
-    {
-      "source": "/:page",
-      "destination": "/:page.html"
-    }
+    { "source": "/raw/(.*)", "destination": "/raw/$1" }
   ]
 }
