--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
     { "source": "/raw/(.*)", "destination": "/raw/$1" }
   ],
   "functions": {
-    "api/**/*.js": {
+    "api/*.js": {
       "runtime": "nodejs20.x"
     }
   }
