--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,8 @@
     }
   ],
   "rewrites": [
-    { "source": "/raw/(.*)", "destination": "/raw/$1" }
+    { "source": "/raw/(.*)", "destination": "/raw/$1" },
+    { "source": "/scripts", "destination": "/scripts.html" },
+    { "source": "/executors", "destination": "/executors.html" }
   ]
 }
