--- a/vercel.json
+++ b/vercel.json
@@ -12,5 +12,6 @@
     { "source": "/raw/(.*)", "destination": "/raw/$1" },
     { "source": "/scripts", "destination": "/scripts.html" },
     { "source": "/executors", "destination": "/executors.html" }
+    { "source": "/", "destination": "/home.html" }
   ]
 }
