--- a/vercel.json
+++ b/vercel.json
@@ -14,3 +14,10 @@
     { "source": "/executors", "destination": "/executors.html" }
   ]
 }
+{
+  "functions": {
+    "api/*.js": {
+      "runtime": "nodejs22.x"
+    }
+  }
+}
