--- a/vercel.json
+++ b/vercel.json
@@ -15,7 +15,7 @@
   ],
   "version": 2,
   "functions": {
-    "api/*.js": {
+    "api/feedback.js": {
       "runtime": "vercel/node@20.x"
     }
   }
