--- a/vercel.json
+++ b/vercel.json
@@ -5,11 +5,6 @@
       "runtime": "vercel/node@22.x"
     }
   },
-  "rewrites": [
-    { "source": "/raw/(.*)", "destination": "/raw/$1" },
-    { "source": "/scripts", "destination": "/scripts.html" },
-    { "source": "/executors", "destination": "/executors.html" }
-  ],
   "headers": [
     {
       "source": "/raw/(.*)",
@@ -18,5 +13,11 @@
         { "key": "Content-Disposition", "value": "inline" }
       ]
     }
+  ],
+  "rewrites": [
+    { "source": "/raw/(.*)", "destination": "/raw/$1" },
+    { "source": "/scripts", "destination": "/scripts.html" },
+    { "source": "/executors", "destination": "/executors.html" },
+    { "source": "/soon", "destination": "/soon.html" },
   ]
 }
