--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,4 @@
 {
-  "version": 2,
-  "functions": {
-    "api/**/*.js": {
-      "runtime": "vercel/node@22.x"
-    }
-  },
   "headers": [
     {
       "source": "/raw/(.*)",
@@ -17,7 +11,6 @@
   "rewrites": [
     { "source": "/raw/(.*)", "destination": "/raw/$1" },
     { "source": "/scripts", "destination": "/scripts.html" },
-    { "source": "/executors", "destination": "/executors.html" },
-    { "source": "/soon", "destination": "/soon.html" },
+    { "source": "/executors", "destination": "/executors.html" }
   ]
 }
