--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+  "cleanUrls": true,
   "headers": [
     {
       "source": "/raw/(.*)",
@@ -9,7 +10,7 @@
     }
   ],
   "rewrites": [
-    { "source": "/raw/(.*)", "destination": "/api/raw/$1" },
+    { "source": "/raw/(.*)", "destination": "/raw/$1" },
     { "source": "/scripts", "destination": "/scripts.html" },
     { "source": "/executors", "destination": "/executors.html" }
   ]
