--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,6 @@
     }
   ],
   "rewrites": [
-    { "source": "/raw/(.*).lua", "destination": "/raw/$1.lua" },
-    { "source": "/raw/(.*).txt", "destination": "/raw/$1.txt" }
+    { "source": "/raw/(.*)", "destination": "/raw/$1.lua" }
   ]
 }
